--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,7 @@ body {
 
 /* Header & Nav */
 header {
-    background-color: #2c3e50;
+    background-color: #6db788;
     color: #ecf0f1;
     padding: 1rem 0;
     text-align: center;
