updating login page

--- a/assets/style.css
+++ b/assets/style.css
@@ -374,3 +374,21 @@ body::after {
     right: 0;
     transform: scaleX(-1);
 }
+
+.login-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 75vh;
+}
+
+.login-card {
+    width: 100%;
+    max-width: 300px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 14px;
+    box-shadow: 0 15px 35px rgba(0,0,0,0.12);
+}
+
+
